# assistant-server

./: README.md  controller.py  main.py  openai_embedding_manager.py  pyproject.toml  vector_db_manager.py
src/: assistant.py  conversation_history.py  document_loader_manager.py  file_service.py  huggingface_embedding_manager.py  ingestion_service.py  mongo_client.py
src/schemas/: __init__.py  conversation_schema.py  file_schema.py
