[project]
name = "ingestion-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.3",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.136.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph-checkpoint-redis>=0.4.1",
    "pymongo>=4.16.0",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
